app/assets/stylesheets/header.css
.outer-header {
    width: 100%;
    height: 100px;
    display: block;
    background-color: #101010;
    position: sticky;
    top: 0;
  }
  
  .inner-header {
    width: 90%;
    height: 100%;
    display: table;
    margin: 0 auto;
    overflow: scroll;
  }
  
  .logo-container {
    height: 100%;
    display: table;
    float: left;
  }
  
  .logo-container h1 {
    color: white;
    height: 100%;
    display: table-cell;
    vertical-align: middle;
    font-family: helvetica;
    font-size: 32px;
    font-weight: 100;
  }
  
  .logo-container h1 span {
    font-weight: 1000;
  }
  
  .nav {
    float: right;
    display: table;
  }
  
  .nav a {
    display: table-cell;
    vertical-align: middle;
    float: left;
    padding: 0px 20px; 
  }
  
  .nav a:last-child {
    padding-right: 0;
  }
  
  .nav a li {
    display: table-cell;
    vertical-align: middle;
    color: white;
    font-family: 'Montserrat';
    font-size: 16px;
  }
  
  .nav a li:hover {
    display: table-cell;
    vertical-align: middle;
    height: 100%;
    font-family: 'Montserrat';
    font-size: 18px;
    color: green;
  }

